--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
@@ -22,6 +23,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "currency.js": "^2.0.3"
+    "currency.js": "^2.0.3",
+    "lodash.clonedeep": "^4.5.0"
   }
 }
