--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   "author": "Joanna Liana",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.23",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^15.0.1",
+    "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.26.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^26.6.3",
+    "jest-mock-extended": "^1.0.15",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "currency.js": "^2.0.3",
-    "lodash.clonedeep": "^4.5.0"
+    "dotenv": "^10.0.0",
+    "lodash.clonedeep": "^4.5.0",
+    "url-join": "^4.0.1"
   }
 }
